@@ -181,7 +181,7 @@ def SER_TVI():
 	addDir('O Bairro (Fonte: TVStory Portugal)','O%20BAIRRO',401,addonfolder+artfolder+'foldericon.png')
 	addDir('Os batanetes (Fonte: cabe917357295 channel)','1',201,addonfolder+artfolder+'foldericon.png',search_query = 'allintitle:"batanetes"',channel_id = 'cabe917357295')
 	addDir('Série 37 (Fonte: FNunes94 channel)','1',200,addonfolder+artfolder+'foldericon.png',playlist_id = 'PLRrd7-_JAWxjywWYnOIe31L7gGCNWhKHG')
-	addDir('Série 37 (Fonte: mary1sofia channel)','1',201,addonfolder+artfolder+'foldericon.png',playlist_id = 'PLFfuPRYEifM36WCQcQRL48tlxbu4OXrlP')
+	addDir('Série 37 (Fonte: mary1sofia channel)','1',200,addonfolder+artfolder+'foldericon.png',playlist_id = 'PLFfuPRYEifM36WCQcQRL48tlxbu4OXrlP')
 
 def RADIO_PT():
 	addDir('[B]M80 Podcasts[/B]','',10,addonfolder+artfolder+'m80.jpg')
@@ -894,14 +894,13 @@ elif mode==407: maisnovelas.CATEGORIES_maisnovelas()
 elif mode==408: maisnovelas.listar_episodios(url)
 elif mode==409: maisnovelas.procurar_fontes(url,name,iconimage)
 elif mode==410: maisnovelas.alterar_vista(maisnovelas.maisnovelas_url)
-elif mode==411: novelasgravadas.CATEGORIES_novelasgravadas()
+elif mode==411: novelasgravadas.listar_categorias()
 elif mode==412: novelasgravadas.listar_episodios(url)
 elif mode==413: novelasgravadas.procurar_fontes(url,name,iconimage)
-elif mode==414: novelasgravadas.alterar_vista(novelasgravadas.novelasgravadas_url)
 elif mode==415: assistirnovelas.CATEGORIES_assistirnovelas()
 elif mode==416: assistirnovelas.listar_episodios(url)
 elif mode==417: assistirnovelas.procurar_fontes(url,name,iconimage)
-elif mode==418: vernovelas.CATEGORIES_vernovelas()
+elif mode==418: vernovelas.listar_categorias()
 elif mode==419: vernovelas.listar_episodios(url)
 elif mode==420: vernovelas.procurar_fontes(url,name,iconimage)
 elif mode==421: documentariosvarios.CATEGORIES_documentariosvarios()
