@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.replaypt" name="Replay PT" version="0.1.9" provider-name="techdealer">
+<addon id="plugin.video.replaypt" name="Replay PT" version="0.2.0" provider-name="techdealer">
   <requires>
     <import addon="xbmc.python" version="2.1.0"/>
   </requires>
